--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,10 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/css/form.css": "/css/form.css",
+    "/css/login.css": "/css/login.css",
+    "/css/main.css": "/css/main.css",
+    "/css/sections.css": "/css/sections.css",
+    "/css/table.css": "/css/table.css",
+    "/js/form.js": "/js/form.js"
 }
